added dom for dropdown

--- a/landing_page.html
+++ b/landing_page.html
@@ -9,13 +9,13 @@
         <title>Subscription Management</title>
     </head>
     <body>
-        <div class="header display_flex">
+        <div id="head" class="header display_flex">
             <div><img class="logo" src="https://www.chargebee.com/static/resources/brand/chargebee-logo-black.svg" /></div>
             <div id="prdt">Product</div>
-            <div><a href="pricing.html">Pricing</a></div>
-            <div>Solutions</div>
-            <div>Customers</div>
-            <div>Resources</div>
+            <div id="pricing"><a href="pricing.html">Pricing</a></div>
+            <div id="solutions">Solutions</div>
+            <div id="customer">Customers</div>
+            <div id="resources">Resources</div>
             <div class="login_demo display_flex">
                 <div class="display_flex schedule schedule_orange">
                     <p class="demo">Schedule a Demo</p>
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="header_dropdown_product">
-            <div class="dropdown_content display_flex drop_sol">
+            <div class="dropdown_content display_flex">
                 <div>
                     <div>Subscription Management</div>
                     <div>Overview</div>
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="header_dropdown_solutions">
-            <div class="dropdown_content display_flex">
+            <div class="dropdown_content display_flex  drop_sol">
                 <div>
                     <div>By Role</div>
                     <div>Finance</div>
@@ -398,28 +398,28 @@
             <div>
                 <div class="display_flex">
                     <p>Product</p>
-                    <i class="fi-rr-angle-small-right"></i>
+                    <i class="fi-rr-angle-small-right arrow"></i>
                 </div>
-                <div>Subscription Management</div>
-                <div>Recurring Billing and Invoicing</div>
-                <div>Recurring Payments</div>
-                <div>Accounting and Taxes</div>
-                <div>SaaS Reporting</div>
-                <div>Enterprise Billing</div>
-                <div>Integrations</div>
+                <div class="hover_pad">Subscription Management</div>
+                <div class="hover_pad">Recurring Billing and Invoicing</div>
+                <div class="hover_pad">Recurring Payments</div>
+                <div class="hover_pad">Accounting and Taxes</div>
+                <div class="hover_pad">SaaS Reporting</div>
+                <div class="hover_pad">Enterprise Billing</div>
+                <div class="hover_pad">Integrations</div>
             </div>
             <div>
                 <div class="display_flex">
                     <p>Help & Support</p>
                     <i class="fi-rr-angle-small-right"></i>
                 </div>
-                <div>Security</div>
-                <div>FAQs</div>
-                <div>Status</div>
-                <div>Product Documentation</div>
-                <div>API Documentation</div>
-                <div>Supported Payment Gateways</div>
-                <div>Sitemap</div>
+                <div class="hover_pad">Security</div>
+                <div class="hover_pad">FAQs</div>
+                <div class="hover_pad">Status</div>
+                <div class="hover_pad">Product Documentation</div>
+                <div class="hover_pad">API Documentation</div>
+                <div class="hover_pad">Supported Payment Gateways</div>
+                <div class="hover_pad">Sitemap</div>
             </div>
             <div>
                 <div class="display_flex">
