added the descriptory tag - 3 rd one from top, 2 more divsions to complete

--- a/learn-more.html
+++ b/learn-more.html
@@ -18,18 +18,36 @@
                     <button>Schedule a Demo -></button>
                 </div>
                 <div id = "intro_content">
-                    <div id = "responsive_tags"></div>
+                    <div id = "responsive_tags">
+                        <button></button>
+                        <button></button>
+                        <button></button>
+                        <button></button>
+                        <button></button>
+                    </div>
                 </div>
 
                 <div id = "tag_description">
-                    <div>1</div>
-                    <div>2</div>
-                    <div>3</div>
-                    <div>4</div>
-                    <div>5</div>
+                    <div><h1><br/><br/>Manage <br/>Subscriptions<br/>at Scale</h1></div>
+                    <div><p class = "box_writeup"><span style="font-weight : bold;">Discover new revenue potential</span> and 
+                        turn them into outcomes with endless options to experiment with pricing models.</p></div>
+                    <div><p class="box_writeup"><span style="font-weight : bold;">Retain customers better</span> with proactive engagement, self-service and churn management.</p></div>
+                    <div><p class="box_writeup"><span style="font-weight : bold;">Get a unified view</span> of all subscription and customer data in one place and engage with more context.</p></div>
+                    <div><p class="box_writeup"><span style="font-weight : bold;">Create upsell opportunities</span> through addon recommendations and product bundles.</p></div>
                     <hr/>
                 </div>
                 <div id = "deeper_description">
+                    <div>
+                        <p class = "box_small_head">Plan and Pricing Management</p>
+                        <p class = "box_main_head">Price the Way That<br/>
+                            Makes Sense for Your Business</p>
+                        <p class = "box_writeup">New revenue could be hiding behind untested pricing. Roll out new subscription plans rapidly 
+                            with flexible billing frequencies. Whether you follow a flat-fee, pay-as-you-go or a completely 
+                            customized pricing structure - Chargebee does it all.</p>
+                            <a class= "box_anchor" href = "https://www.chargebee.com/customers/trail/">Check out the different plans you can configure 🡢</a>
+                            <br/><br/><a class= "box_anchor" href = "https://www.chargebee.com/saas-pricing-models/">Find the right pricing model for you 🡢</a>
+                            <br/><br/><a class= "box_anchor" href = "https://www.chargebee.com/subscription-management/plan-addons/">Package it with recurring and one-time addons 🡢</a>
+                    </div>
                 </div>
                 <div id = "testimonial">
                     <div>
