add responsiveness to bottom container

--- a/landing_page.html
+++ b/landing_page.html
@@ -400,50 +400,50 @@
                     <p>Product</p>
                     <i class="fi-rr-angle-small-right arrow"></i>
                 </div>
-                <div class="hover_pad">Subscription Management</div>
-                <div class="hover_pad">Recurring Billing and Invoicing</div>
-                <div class="hover_pad">Recurring Payments</div>
-                <div class="hover_pad">Accounting and Taxes</div>
-                <div class="hover_pad">SaaS Reporting</div>
-                <div class="hover_pad">Enterprise Billing</div>
-                <div class="hover_pad">Integrations</div>
+                <div id="subs">Subscription Management</div>
+                <div id="rec_bill">Recurring Billing and Invoicing</div>
+                <div id="rec_pay">Recurring Payments</div>
+                <div id="acc">Accounting and Taxes</div>
+                <div id="saas">SaaS Reporting</div>
+                <div id="enter">Enterprise Billing</div>
+                <div id="int">Integrations</div>
             </div>
             <div>
                 <div class="display_flex">
                     <p>Help & Support</p>
                     <i class="fi-rr-angle-small-right"></i>
                 </div>
-                <div class="hover_pad">Security</div>
-                <div class="hover_pad">FAQs</div>
-                <div class="hover_pad">Status</div>
-                <div class="hover_pad">Product Documentation</div>
-                <div class="hover_pad">API Documentation</div>
-                <div class="hover_pad">Supported Payment Gateways</div>
-                <div class="hover_pad">Sitemap</div>
+                <div id="sec">Security</div>
+                <div id="faq">FAQs</div>
+                <div id="stat">Status</div>
+                <div id="product_d">Product Documentation</div>
+                <div id="api">API Documentation</div>
+                <div id="support">Supported Payment Gateways</div>
+                <div id="site">Sitemap</div>
             </div>
             <div>
                 <div class="display_flex">
                     <p>Resources</p>
                     <i class="fi-rr-angle-small-right"></i>
                 </div>
-                <div>Blog</div>
-                <div>Compare Payment Gateways</div>
-                <div>Tackling Payment Failures</div>
-                <div>Enterprise Billing Guide</div>
-                <div>Webinars</div>
-                <div>Glossaries</div>
+                <div id="blog">Blog</div>
+                <div id="compare">Compare Payment Gateways</div>
+                <div id="tackle">Tackling Payment Failures</div>
+                <div id="enter_bill">Enterprise Billing Guide</div>
+                <div id="web">Webinars</div>
+                <div id="gloss">Glossaries</div>
             </div>
             <div>
                 <div class="display_flex">
                     <p>Company</p>
                     <i class="fi-rr-angle-small-right"></i>
                 </div>
-                <div>Customers</div>
-                <div>Partners</div>
-                <div>Careers</div>
-                <div>Press</div>
-                <div>Terms</div>
-                <div>Privacy</div>
+                <div id="customers">Customers</div>
+                <div id="partner">Partners</div>
+                <div id="career">Careers</div>
+                <div id="press">Press</div>
+                <div id="terms">Terms</div>
+                <div id="privacy">Privacy</div>
             </div>
         </div>
         <div id="footer">
