--- a/landing_page.html
+++ b/landing_page.html
@@ -11,105 +11,107 @@
         <title>Subscription Management</title>
     </head>
     <body>
-        <div id="head" class="header display_flex">
-            <div><img class="logo" src="https://www.chargebee.com/static/resources/brand/chargebee-logo-black.svg" /></div>
-            <div id="prdt">Product</div>
-            <div id="pricing"><a href="pricing.html">Pricing</a></div>
-            <div id="solutions">Solutions</div>
-            <div id="customer">Customers</div>
-            <div id="resources">Resources</div>
-            <div class="login_demo display_flex">
-                <div class="display_flex schedule schedule_orange">
-                    <p class="demo"><a href="demo.html">Schedule a Demo</a></p>
-                    <i class="fi-rr-angle-small-right demo"></i>
-                </div>
-                <div class="display_flex login">
-                    <div><i class="fi-sr-lock"></i></div>
-                    <div><a href="login.html">Login</a></div>
-                    <div><i class="fi-rr-angle-small-right"></i></div>
-                </div>
-            </div>
-        </div>
-        <div class="header_dropdown_product">
-            <div class="dropdown_content display_flex">
-                <div>
-                    <div>Subscription Management</div>
-                    <div>Overview</div>
-                    <div>Create & Manage Plans</div>
-                    <div>Pricing Management</div>
-                    <div>Handle Trial Subscriptions</div>
-                    <div>Customer Self-service Portal</div>
-                    <div>Mobile Solutions</div>
-                </div>
-                <div>
-                    <div>Billing Automation</div>
-                    <div>Overview</div>
-                    <div>Usage Based Billing</div>
-                    <div>Invoicing Automation</div>
-                    <div>Quotes</div>
-                    <div>Proration</div>
-                </div>
-                <div>
-                    <div>Recurring Payments</div>
-                    <div>Overview</div>
-                    <div>Multiple Payment Methods</div>
-                    <div>Multiple Payment Gateways</div>
-                    <div>Smart Dunning</div>
-                    <div>Chargeback Management</div>
-                </div>
-                <div>
-                    <div>Accounting & Taxes</div>
-                    <div>Overview</div>
-                    <div>Revenue Recognition</div>
-                    <div>Manage Sales Tax</div>
-                    <div>One-Click Reconciliation</div>
-                </div>
-                <div>
-                    <div>Reporting & Analytics</div>
-                    <div>Overview</div>
-                    <div>Deferred Revenue Reporting</div>
+        <nav>
+            <div id="head" class="header display_flex">
+                <div><a href="landing_page.html"><img class="logo" src="https://www.chargebee.com/static/resources/brand/chargebee-logo-black.svg" /></a></div>
+                <div id="prdt">Product</div>
+                <div id="pricing"><a href="pricing.html">Pricing</a></div>
+                <div id="solutions">Solutions</div>
+                <div id="customer">Customers</div>
+                <div id="resources">Resources</div>
+                <div class="login_demo display_flex">
+                    <div class="display_flex schedule schedule_orange">
+                        <p class="demo"><a href="demo.html">Schedule a Demo</a></p>
+                        <i class="fi-rr-angle-small-right demo"></i>
+                    </div>
+                    <div class="display_flex login">
+                        <div><i class="fi-sr-lock"></i></div>
+                        <div><a href="login.html">Login</a></div>
+                        <div><i class="fi-rr-angle-small-right"></i></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="header_dropdown_solutions">
-            <div class="dropdown_content display_flex  drop_sol">
-                <div>
-                    <div>By Role</div>
-                    <div>Finance</div>
-                    <div>Sales</div>
-                    <div>RevOps</div>
-                </div>
-                <div>
-                    <div>By Industry</div>
-                    <div>B2B SaaS</div>
-                    <div>Ecommerce</div>
-                    <div>E-learning</div>
-                    <div>Publishing</div>
-                </div>
-                <div>
-                    <div>By Strategy</div>
-                    <div>Roll Out New Pricing</div>
-                    <div>Expand Globally</div>
-                    <div>Move Upmarket</div>
-                    <div>Shift to Subscriptions</div>
-                </div>
-                <div>
-                    <div>By Business Size</div>
-                    <div>Startup</div>
-                    <div>ScaleUp</div>
-                    <div>Enterprise</div>
-                </div>
-                <div>
-                    <div>By Business Model</div>
-                    <div>Self-serve</div>
-                    <div>Sales-driven</div>
-                </div>
-                <div>
-                    <div>By Geography</div>
-                    <div>Europe</div>
+            <div class="header_dropdown_product">
+                <div class="dropdown_content display_flex">
+                    <div>
+                        <div>Subscription Management</div>
+                        <div>Overview</div>
+                        <div>Create & Manage Plans</div>
+                        <div>Pricing Management</div>
+                        <div>Handle Trial Subscriptions</div>
+                        <div>Customer Self-service Portal</div>
+                        <div>Mobile Solutions</div>
+                    </div>
+                    <div>
+                        <div>Billing Automation</div>
+                        <div>Overview</div>
+                        <div>Usage Based Billing</div>
+                        <div>Invoicing Automation</div>
+                        <div>Quotes</div>
+                        <div>Proration</div>
+                    </div>
+                    <div>
+                        <div>Recurring Payments</div>
+                        <div>Overview</div>
+                        <div>Multiple Payment Methods</div>
+                        <div>Multiple Payment Gateways</div>
+                        <div>Smart Dunning</div>
+                        <div>Chargeback Management</div>
+                    </div>
+                    <div>
+                        <div>Accounting & Taxes</div>
+                        <div>Overview</div>
+                        <div>Revenue Recognition</div>
+                        <div>Manage Sales Tax</div>
+                        <div>One-Click Reconciliation</div>
+                    </div>
+                    <div>
+                        <div>Reporting & Analytics</div>
+                        <div>Overview</div>
+                        <div>Deferred Revenue Reporting</div>
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="header_dropdown_solutions">
+                <div class="dropdown_content display_flex  drop_sol">
+                    <div>
+                        <div>By Role</div>
+                        <div>Finance</div>
+                        <div>Sales</div>
+                        <div>RevOps</div>
+                    </div>
+                    <div>
+                        <div>By Industry</div>
+                        <div>B2B SaaS</div>
+                        <div>Ecommerce</div>
+                        <div>E-learning</div>
+                        <div>Publishing</div>
+                    </div>
+                    <div>
+                        <div>By Strategy</div>
+                        <div>Roll Out New Pricing</div>
+                        <div>Expand Globally</div>
+                        <div>Move Upmarket</div>
+                        <div>Shift to Subscriptions</div>
+                    </div>
+                    <div>
+                        <div>By Business Size</div>
+                        <div>Startup</div>
+                        <div>ScaleUp</div>
+                        <div>Enterprise</div>
+                    </div>
+                    <div>
+                        <div>By Business Model</div>
+                        <div>Self-serve</div>
+                        <div>Sales-driven</div>
+                    </div>
+                    <div>
+                        <div>By Geography</div>
+                        <div>Europe</div>
+                    </div>
+                </div>
+            </div>
+        </nav>
         <div class="colored_sub">
             <h5>Subscription Billing & Revenue Operations</h5>
             <h5>for Fast-growth B2B SaaS</h5>
