title icon and content updated, animations done for second div, 1 more division to complete

--- a/learn-more.html
+++ b/learn-more.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Chargebee : Subscription Management</title>
         <link rel = "stylesheet" href = "learn-more-styles.css" >
+        <link data-n-head="true" rel="shortcut icon" type="image/x-icon"
+        href="https://www.chargebee.com/static/resources/brand/favicon.png">
     </head>
     <body>
         <div>
@@ -19,11 +22,11 @@
                 </div>
                 <div id = "intro_content">
                     <div id = "responsive_tags">
-                        <button></button>
-                        <button></button>
-                        <button></button>
-                        <button></button>
-                        <button></button>
+                        <div><p>Subscription <br/>Management</p></div>
+                        <div><p>Billing and<br/>Invoice</p></div>
+                        <div><p>Recurring <br/>Payments</p></div>
+                        <div><p>Accounting<br/>and Taxes</p></div>
+                        <div><p>Reporting<br/>and Analytics</p></div>
                     </div>
                 </div>
 
