overall visual part partially conceived, animation works pending, font changed so size modification is required

--- a/learn-more.html
+++ b/learn-more.html
@@ -5,6 +5,9 @@
         <link rel = "stylesheet" href = "learn-more-styles.css" >
         <link data-n-head="true" rel="shortcut icon" type="image/x-icon"
         href="https://www.chargebee.com/static/resources/brand/favicon.png">
+
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div>
@@ -21,6 +24,17 @@
                     <button>Schedule a Demo -></button>
                 </div>
                 <div id = "intro_content">
+                    <div class = "split_intro reduce_width"><div>🡠</div></div>
+                    <div id = "main_headings_and_button"class = "split_intro">
+                        <div><h1>Keep Subscription Management Uncomplicated as You Scale</h1></div>
+                        <div><p>Get the flexibility to manage 
+                            subscription problems you have today. And the ones that will creep up a year from now.</p></div>
+                        <div>
+                            <button id = "blue_button">Schedule a demo<span> 🡢</span></button>
+                            <button id = "blue_border_button">Sign up for free<span> 🡢</span></button>
+                        </div>
+                    </div>
+                    <div class = "split_intro reduce_width"><div>🡢</div></div>
                     <div id = "responsive_tags">
                         <div><p>Subscription <br/>Management</p></div>
                         <div><p>Billing and<br/>Invoice</p></div>
