added media query and few response

--- a/landing_page.html
+++ b/landing_page.html
@@ -30,6 +30,7 @@
                         <div><i class="fi-rr-angle-small-right"></i></div>
                     </div>
                 </div>
+                <div></div>
             </div>
         </div>
 
@@ -39,40 +40,40 @@
             <div class="dropdown_content display_flex">
                 <div>
                     <div>Subscription Management</div>
-                    <div>Overview</div>
-                    <div>Create & Manage Plans</div>
-                    <div>Pricing Management</div>
-                    <div>Handle Trial Subscriptions</div>
-                    <div>Customer Self-service Portal</div>
-                    <div>Mobile Solutions</div>
+                    <div id="over">Overview</div>
+                    <div id="creat">Create & Manage Plans</div>
+                    <div id="prici">Pricing Management</div>
+                    <div id="hand">Handle Trial Subscriptions</div>
+                    <div id="cssp">Customer Self-service Portal</div>
+                    <div id="ms">Mobile Solutions</div>
                 </div>
                 <div>
                     <div>Billing Automation</div>
-                    <div>Overview</div>
-                    <div>Usage Based Billing</div>
-                    <div>Invoicing Automation</div>
-                    <div>Quotes</div>
-                    <div>Proration</div>
+                    <div id="ovr">Overview</div>
+                    <div id="ubb">Usage Based Billing</div>
+                    <div id="ia">Invoicing Automation</div>
+                    <div id="quot">Quotes</div>
+                    <div id="pror">Proration</div>
                 </div>
                 <div>
                     <div>Recurring Payments</div>
-                    <div>Overview</div>
-                    <div>Multiple Payment Methods</div>
-                    <div>Multiple Payment Gateways</div>
-                    <div>Smart Dunning</div>
-                    <div>Chargeback Management</div>
+                    <div id="ovrview">Overview</div>
+                    <div id="mpt">Multiple Payment Methods</div>
+                    <div id="mpg">Multiple Payment Gateways</div>
+                    <div id="sd">Smart Dunning</div>
+                    <div id="cm">Chargeback Management</div>
                 </div>
                 <div>
                     <div>Accounting & Taxes</div>
-                    <div>Overview</div>
-                    <div>Revenue Recognition</div>
-                    <div>Manage Sales Tax</div>
-                    <div>One-Click Reconciliation</div>
+                    <div id="ovrv">Overview</div>
+                    <div id="rr">Revenue Recognition</div>
+                    <div id="mst">Manage Sales Tax</div>
+                    <div id="ocr">One-Click Reconciliation</div>
                 </div>
                 <div>
                     <div>Reporting & Analytics</div>
-                    <div>Overview</div>
-                    <div>Deferred Revenue Reporting</div>
+                    <div id="ovrvw">Overview</div>
+                    <div id="drr">Deferred Revenue Reporting</div>
                 </div>
             </div>
         </div>
@@ -83,38 +84,38 @@
             <div class="dropdown_content display_flex  drop_sol">
                 <div>
                     <div>By Role</div>
-                    <div>Finance</div>
-                    <div>Sales</div>
-                    <div>RevOps</div>
+                    <div id="h_fin">Finance</div>
+                    <div id="h_sale">Sales</div>
+                    <div id="h_rev">RevOps</div>
                 </div>
                 <div>
                     <div>By Industry</div>
-                    <div>B2B SaaS</div>
-                    <div>Ecommerce</div>
-                    <div>E-learning</div>
-                    <div>Publishing</div>
+                    <div id="h_b3b">B2B SaaS</div>
+                    <div id="h_ecom">Ecommerce</div>
+                    <div id="h_elrn">E-learning</div>
+                    <div id="h_pub">Publishing</div>
                 </div>
                 <div>
                     <div>By Strategy</div>
-                    <div>Roll Out New Pricing</div>
-                    <div>Expand Globally</div>
-                    <div>Move Upmarket</div>
-                    <div>Shift to Subscriptions</div>
+                    <div id="h_ronp">Roll Out New Pricing</div>
+                    <div id="h_eg">Expand Globally</div>
+                    <div id="h_mu">Move Upmarket</div>
+                    <div id="h_sts">Shift to Subscriptions</div>
                 </div>
                 <div>
                     <div>By Business Size</div>
-                    <div>Startup</div>
-                    <div>ScaleUp</div>
-                    <div>Enterprise</div>
+                    <div id="h_sup">Startup</div>
+                    <div id="h_sclup">ScaleUp</div>
+                    <div id="h_entrp">Enterprise</div>
                 </div>
                 <div>
                     <div>By Business Model</div>
-                    <div>Self-serve</div>
-                    <div>Sales-driven</div>
+                    <div id="h_ss">Self-serve</div>
+                    <div id="h_sd">Sales-driven</div>
                 </div>
                 <div>
                     <div>By Geography</div>
-                    <div>Europe</div>
+                    <div id="h_eur">Europe</div>
                 </div>
             </div>
         </div>
