--- a/demo.html
+++ b/demo.html
@@ -32,36 +32,45 @@
             </div></div>
             <div class="mainbox">
             <div class="box1">
-                <span class="b1h">Welcome back 👋🏼 Ready to see Chargebee in action?</span>
-                <span class="b1p">Our team will help you breakdown your
-                    billing pain points with a personalized
-                    demo of Chargebee</span>
+                <span class="b1h">Welcome back 👋🏼 Ready to see Chargebee in action?</span><br/>
+                <div class="b1p"><span >
+                    Our team will help you breakdown your billing pain points with a personalized demo of Chargebee</span></div>
             </div>
            
-            <div class="box2"></div>
-            <div class="box3">
-                <div class="demo_form">
-                    <label for="FName"> First Name*</label><br>
-                    <input type="text" id="Fname" name="lname" maxlength="100%" size="80%"><br><br>
+            <div class="box2"><img src="D:\Masai\masai-Unit-1-Project"/></div>
+            <div class="middle_r">
 
-                    <label for="Email"> Email*</label><br>
-                    <input type="text" id="Email" maxlength="100%" size="80%"><br><br>
 
-                    <label for="Phone"> Phone number*</label><br>
-                    <select name="country" id="Phone">
-                        <option value="India"> IND</option>
-                        <option value="Englang">Eng</option> &nbsp;&nbsp;
-                        <input type="text" placeholder="+91" maxlength="100%" size="72.6%"><br><br>
+                <div class="middle_input">
+                    <form class="middle_form">
+                        <label for="FName"> First Name <span class="Form_star_red">*</span></label><br>
+                        <input type="text" id="Fname" name="lname" maxlength="40%" size="25"><br><br>
+
+                        <label for="Email"> Email <span class="Form_star_red">*</span></label><br>
+                        <input type="text" id="Email"><br><br>
+
+                        <label for="Phone"> Phone number <span class="Form_star_red">*</span></label><br>
+                        
+
+                        <select name="country" id="name">
+                            <option value="India">IND (भारत)</option>
+                            <option value="Englang">Eng</option> &nbsp;&nbsp;
+                            <option value="Canada">Can</option> 
+                        </select>
+                        <input type="text" id="isdcode" placeholder="+91"><br><br>
 
                         <label for="Website"> Website URL</label> <br>
-                        <input type="text" id="name" maxlength="100%" size="80%"> <br> <br>
-
-                        <input type="submit" value="Shedule a Demo"> <br> <br> <br>
+                        <input type="textarea" id="name" placeholder="gramener.com"> <br> <br>
 
 
-                        <p>By clicking on Schedule a Demo, you acknowledge having read our</p><br>
-                        <a href="pri"> Privacy note</a>
-                </div>
+
+
+                        <button class="form_shedule"> Shedule a Demo </button> <br> <br>
+
+                        <p class="form_msg">By clicking on Schedule a Demo, you acknowledge having read our
+                            <a class="form_privacy" href="pri"> Privacy note</a>
+                        </p><br>
+                    </form>
         </div>
       </div>  
 </body>
