font sizes adjusted, completed upto 80% except the animated drodown in the nav bar.

--- a/learn-more.html
+++ b/learn-more.html
@@ -20,8 +20,8 @@
                     <div>Solutions</div>
                     <div>Customers</div>
                     <div>Resources</div>
-                    <div>log in ></div>
-                    <button>Schedule a Demo -></button>
+                    <div>log in<span>🡢</span></div>
+                    <button>Schedule a Demo<span>🡢</span></button>
                 </div>
                 <div id = "intro_content">
                     <div class = "split_intro reduce_width"><div>🡠</div></div>
@@ -132,12 +132,12 @@
                     </div>
                 </div>
                 <div id = "demo_signup">
-                    <div><p>Scale your subscription management<br/> in style with Chargebee.</p></div>
+                    <div><p>Scale your subscription management in style with Chargebee.</p></div>
                     <button class = "violet_button">Signup for free &#8594</button>
                     <button id = "white_button">Schedule a demo &#8594</button>
                 </div>
                 <div id = "demo_exclusive">
-                    <div><p>Still unsure? Step Inside and See<br/>
+                    <div><p>Still unsure? Step Inside and See
                         What The Future Looks Like.</p>
                     </div>
                     <div>
