--- a/demo.html
+++ b/demo.html
@@ -37,7 +37,7 @@
                     Our team will help you breakdown your billing pain points with a personalized demo of Chargebee</span></div>
             </div>
            
-            <div class="box2"><img src="D:\Masai\masai-Unit-1-Project"/></div>
+           <div></div>
             <div class="middle_r">
 
 
@@ -65,7 +65,7 @@
 
 
 
-                        <button class="form_shedule"> Shedule a Demo </button> <br> <br>
+                        <button class="form_shedule"><a href>Shedule a Demo</a></button> <br> <br>
 
                         <p class="form_msg">By clicking on Schedule a Demo, you acknowledge having read our
                             <a class="form_privacy" href="pri"> Privacy note</a>
