--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
                         <p class="forpass">Forgot password</p>
                     </form>
                     <div>
-                        <button class="btn"><img id="img6"src="D:\Masai\masai-Unit-1-Project"align="left"/><p class="p7">Sign in with goggle</p></button>
+                        <button class="btn"><img id="img6"src="D:\Masai\masai-Unit-1-Project"align="left"/><p class="p7"><a href>Sign in with goggle</a></p></button>
                         <p class="btn2"><a href>Sign in with single sign-On</a></p>
                     </div>
                 </div>
