--- a/learn-more.html
+++ b/learn-more.html
@@ -14,14 +14,15 @@
             <div id = "layout">
                 <div id = "nav_bar">
                     <div>
+                        <a href = "landing_page.html"></a>
                     </div>
-                    <div>Product</div>
-                    <div>Pricing</div>
+                    <div><a>Product</div>
+                    <div><a href = "pricing.html">Pricing</a></div>
                     <div>Solutions</div>
                     <div>Customers</div>
                     <div>Resources</div>
-                    <div>log in<span>🡢</span></div>
-                    <button>Schedule a Demo<span>🡢</span></button>
+                    <div><a href="login.html">log in<span>🡢</span></a></div>
+                    <button><a href = "demo.html">Schedule a Demo<span>🡢</span></a></button>
                 </div>
                 <div id = "intro_content">
                     <div class = "split_intro reduce_width"><div>🡠</div></div>
