max width property and linked the main logo

--- a/learn-more.html
+++ b/learn-more.html
@@ -14,7 +14,7 @@
             <div id = "layout">
                 <div id = "nav_bar">
                     <div>
-                        <a href = "landing_page.html"></a>
+                        <a href = "landing_page.html">click here!!!!!</a>
                     </div>
                     <div><a>Product</div>
                     <div><a href = "pricing.html">Pricing</a></div>
